[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "OpenDBUtils"
version = "0.1.0"
description = "An open source utils for interacting with databases"
readme = "README.md"
authors = [
    {name = "Yucheng Liao", email = "ycliao@zju.edu.cn"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.3.0",
    "polars>=0.15.0",
    "psycopg2-binary>=2.9.0",
    "mysql-connector-python>=8.0.0",
    "sqlalchemy>=1.4.0",
    "concurrent-futures>=3.0.0",
    "sqlite3>=3.0.0"
]

[project.urls]
"Homepage" = "https://github.com/Elcherneske/OpenDBUtils"
"Bug Tracker" = "https://github.com/Elcherneske/OpenDBUtils/issues"

[tool.setuptools]
packages = ["OpenDBUtils"]

[tool.setuptools.package-data]
OpenDBUtils = ["py.typed"] 